# popcorn

./: Cargo.toml
popcorn-blas/src/: lib.rs  operation.rs
popcorn-blas/src/frameworks/native/: mod.rs
popcorn-blas/src/frameworks/native/core_ops/: dot.rs
popcorn-butter/: Cargo.toml
popcorn-butter/src/: exec.rs  lib.rs
popcorn-butter/src/ops/: dot.rs  mod.rs  placeholder.rs
popcorn-core/: Cargo.toml
popcorn-core/src/: buffer.rs  device.rs  event.rs  lib.rs
popcorn-core/src/platform/cpu/: convert.rs  device.rs  event.rs  memory.rs  mod.rs  work.rs
src/: buffer.rs  lib.rs  vault.rs
